# macos-widgets-rs

./: Cargo.toml  README.md
crates/plist_structs/: Cargo.toml
crates/plist_structs/src/: lib.rs  nested_binary_plist.rs  nskeyed_archiver_formatted_plist.rs  traits.rs
crates/plist_structs_derive/: Cargo.toml
crates/plist_structs_derive/src/: lib.rs
crates/plist_structs_derive/tests/: derive_works.rs
doc/: better_shell.css  plist_info.md
patches/: nskeyedarchiver_converter+0.1.1.patch
src/: lib.rs  main.rs  types.rs
src/types/: notificationcenterui_plist.rs  plist.rs
src/types/chs/: extension_identity.rs  widget.rs  widget_descriptor.rs
src/types/chs/intent/: recommendation.rs  reference.rs
src/types/notificationcenterui_plist/: widgets.rs
src/types/notificationcenterui_plist/widgets/: placement.rs
src/types/plist/: nested_binary_plist.rs  notificationcenterui.rs  nskeyed_archiver_formatted_plist.rs  traits.rs
src/types/plist/notificationcenterui/: widgets.rs
src/types/plist/notificationcenterui/widgets/: placement.rs
src/types/widget/: mod.rs  size.rs
src/types/widget/layout/: mod.rs
tests/: static_notificationcenterui.plist
